# dndScheduler

./: .env.example  .gitignore  Cargo.toml  GEMINI.md  README.md  cookies.txt  dnd_scheduler.db-shm  dnd_scheduler.db-wal
docs/: ACTIVE_CAMPAIGNS_FIX.md  ACTIVITY_FEED_IMPLEMENTED.md  ADD_USER_IMPLEMENTATION.md  ADMIN_EMAIL_LOGIN.md  ADMIN_ENHANCEMENTS.md  ADMIN_GUIDE.md  ADMIN_HOME_BUTTON.md  ANSWER_TO_YOUR_QUESTION.md  AUTHENTICATION_IMPLEMENTATION.md  AUTHENTICATION_PLAN.md  AUTHENTICATION_QUICK_REFERENCE.md  AUTHENTICATION_SYSTEM.md  AUTH_FIX_SUMMARY.md  BACKEND_IMPLEMENTATION.md  BUGFIX_LOGOUT_CONFIRM.md  CADDY_AUTHELIA_CONFIG.md  CARGO_AUDIT_REPORT.md  CHANGES_SUMMARY.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  DEBUG_AVAILABILITY.md  DEPLOYMENT_CHECKLIST.md  DM_TOOLS_IMPLEMENTATION.md  Eberron_Forgia_Artefice_Documentazione.md  FAKE_DATA_REMOVED.md  FIX_CARICAMENTO.md  FIX_MANAGE_PAGE.md  FIX_RECOMMENDED_TIMES.md  FOUNDRY_VTT_INTEGRATION.md  JOIN_POLL_AUTHORIZATION.md  JOIN_SESSION_LOGIN.md  JSON_ERROR_FIX.md  LOGIN_ISTRUZIONI.md  NAVIGAZIONE_AGGIORNATA.md  OBJECT_OBJECT_FIX.md  OWASP_PHASE1_SUMMARY.md  OWASP_SECURITY_COMPLETE.md  OWASP_SECURITY_PLAN.md  OWASP_TOP_10_AUDIT.md  PER_DAY_TIME_PREFERENCES.md  PRODUCTION_READY.md  (+48 more)
scripts/: add-nav-protection.py  check_admin.sh  check_user.sh  delete_all_users.sh  fix-tokens.sh  manage_user.sh  reset-password.sh  run_tests.sh  test_admin_email_login.sh  test_rbac.sh  translate-all.py  translate-complete.py  update-navigation.py  update-theme.sh  verify_availability.py
src/: activity_handlers.rs  audit.rs  auth.rs  db.rs  (+9 more)
(+82 files in other folders)
