[package]
name = "dnd_scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Updated to 0.8.2 to fix RUSTSEC-2024-0363 (Binary Protocol Misinterpretation)
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
tower = { version = "0.4", features = ["limit", "buffer"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.17.1"
# Updated to latest to fix rustls-pemfile unmaintained warning
reqwest = { version = "0.12", features = ["json"] }
tower_governor = "0.4"
zxcvbn = "3.1.0"
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls", "builder"] }

[dev-dependencies]
axum-test = "15.0"
once_cell = "1.19"
tempfile = "3.8"
